--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="js/jvsc.js"> </script>
-	<script src="js/class.js"></script>
-	<script src="js/form.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/css.css">
-	<link rel="stylesheet" type="text/css" href="css/form.css">
+	<script src="jvsc.js"> </script>
+	<script src="class.js"></script>
+	<script src="form.js"></script>
+	<link rel="stylesheet" type="text/css" href="css.css">
+	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
 <header id="toolbar" style=" background-color:#008080"> <!-- #104E8B-->
