--- a/index.htm
+++ b/index.htm
@@ -26,7 +26,7 @@
 </header> 
 <div id="nav" >
 	<div id="Alphabet">
-		<div><img id="plus" src="alphabet/plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
+		<div><img id="plus" src="plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
 		<!--<div><img id="all" src="alphabet/All.png" height="70px" width="70px"></div>
 		<!--<div><img id="A" src="alphabet/A.png" height="70px" width="70px"></div>-->
 		<!--<p id="All" style=" font-size: 50px; font-family: 'open Sans Condensed' ; color: #87cefa; padding-bottom: 20px" id="A">All</p>-->
