--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="jvsc.js"> </script>
-	<script src="class.js"></script>
-	<script src="form.js"></script>
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="stylesheet" type="text/css" href="form.css">
+	<script src="js/jvsc.js"> </script>
+	<script src="js/class.js"></script>
+	<script src="js/form.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/css.css">
+	<link rel="stylesheet" type="text/css" href="css/form.css">
 </head>
 <body>
 <header id="toolbar" style=" background-color:#008080"> <!-- #104E8B-->
@@ -26,7 +26,7 @@
 </header> 
 <div id="nav" >
 	<div id="Alphabet">
-		<div><img id="plus" src="plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
+		<div><img id="plus" src="alphabet/plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
 		<!--<div><img id="all" src="alphabet/All.png" height="70px" width="70px"></div>
 		<!--<div><img id="A" src="alphabet/A.png" height="70px" width="70px"></div>-->
 		<!--<p id="All" style=" font-size: 50px; font-family: 'open Sans Condensed' ; color: #87cefa; padding-bottom: 20px" id="A">All</p>-->
@@ -59,8 +59,33 @@
 	</div>
 	<div id="contact" style="margin-top:5px;margin-left:10px">
 			<div class="letter" id="contactA" style="display: none;margin-left:30px;margin-bottom:30px"></div>
-			<div class="letter" id="contactB" style="display: none ; margin-left: 30px;"></div>
-			<div class="letter" id="contactC" style="display: none"></div> 
+			<div class="letter" id="contactB" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactC" style="display: none;margin-left:30px;margin-bottom:30px"></div> 
+			<div class="letter" id="contactD" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactE" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactF" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactG" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactH" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactI" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactJ" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactK" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactL" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactM" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactN" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactO" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactP" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactQ" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactR" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactS" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactT" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactU" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactV" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactW" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactX" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactY" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			<div class="letter" id="contactZ" style="display: none;margin-left:30px;margin-bottom:30px"></div>
+			
+
 		
 			<div class="main" style="display: none ">
 				<form class="form" method="post" action="#">
