--- a/index.htm
+++ b/index.htm
@@ -6,11 +6,11 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script src="js/jvsc.js"> </script>
-	<script src="js/class.js"></script>
-	<script src="js/form.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/css.css">
-	<link rel="stylesheet" type="text/css" href="css/form.css">
+	<script src="jvsc.js"> </script>
+	<script src="class.js"></script>
+	<script src="form.js"></script>
+	<link rel="stylesheet" type="text/css" href="css.css">
+	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
 <header id="toolbar" style=" background-color:#008080"> <!-- #104E8B-->
@@ -26,7 +26,7 @@
 </header> 
 <div id="nav" >
 	<div id="Alphabet">
-		<div><img id="plus" src="alphabet/plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
+		<div><img id="plus" src="plus.png" height="80px" width="80px" style="margin-top: 10px"></div>
 		<!--<div><img id="all" src="alphabet/All.png" height="70px" width="70px"></div>
 		<!--<div><img id="A" src="alphabet/A.png" height="70px" width="70px"></div>-->
 		<!--<p id="All" style=" font-size: 50px; font-family: 'open Sans Condensed' ; color: #87cefa; padding-bottom: 20px" id="A">All</p>-->
